tests/ui/async-await/in-trait/warn.stderr
error: use of `async fn` in public traits is discouraged as auto trait bounds cannot be specified
  --> $DIR/warn.rs:6:5
   |
LL |     async fn not_send();
   |     ^^^^^
   |
   = note: you can suppress this lint if you plan to use the trait only in your own code, or do not care about auto traits like `Send` on the `Future`
note: the lint level is defined here
  --> $DIR/warn.rs:3:9
   |
LL | #![deny(async_fn_in_trait)]
   |         ^^^^^^^^^^^^^^^^^
help: you can alternatively desugar to a normal `fn` that returns `impl Future` and add any desired bounds such as `Send`, but these cannot be relaxed without a breaking API change
   |
LL -     async fn not_send();
LL +     fn not_send() -> impl std::future::Future<Output = ()> + Send;
   |

error: aborting due to 1 previous error

